iot-backend-api/iot_backend_api_01_create_deployment.yaml
# Copyright 2018 Ercan Aydoğan. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: iot-cloud-webhook-backend-api-backend-production
spec:
  replicas: 3
  template:
    metadata:
      name: backend
      labels:
        app: iot-cloud-webhook-backend-api
        role: backend
        env: production
    spec:
      containers:
      - name: backend
        image: $CONTAINER_IMAGE
        resources:
          limits:
            memory: "800Mi"
            cpu: "500m"
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8080
        command: [ "/bin/ash", "-c", "python3 app.py" ]
        #args: [ "while true; do sleep 30; done;" ]
        ports:
        - name: backend
          containerPort: 80
        - name: other-backend  
          containerPort: 5000
      volumes:
      - name: config-volume
        configMap:
          name: iot-backend-config
          #items:
          #  - key: config.yml
          #    path: config.yml
      imagePullSecrets:
      - name: $REGISTRY_KEY
