iot-backend-api/iot_backend_api_02_create_service.yaml
# Copyright 2018 Ercan Aydoğan. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  name: iot-cloud-webhook-backend-api-backend
  labels:
    app: iot-cloud-webhook-backend-api-backend
spec:
  type: ClusterIP
  ports:
  - name: backend
    port: 80
    targetPort: 80
    protocol: TCP
  - name: other-backend
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    role: backend
    app: iot-cloud-webhook-backend-api
