iot-backend-api/iot_backend_api_04_create_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iot-cloud-webhook-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    certmanager.k8s.io/issuer: acme-issuer
spec:
  tls:
  - hosts:
    - $TLS_HOST
    secretName: iot-cloud-webhook-tls-certificate
  rules:
  - host: $RULE_HOST
    http:
      paths:
      - backend:
          serviceName: iot-cloud-webhook-backend-api-backend
          servicePort: 5000
